syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Server.ChatApp.Protos";
package account_service_pkg;


service AccountRPCs{
	rpc SignUp(RegisterReq) returns(AccountResponse);
	rpc Login(LoginReq) returns(AccountResponse);
	rpc LoginByToken(LoginByTokenReq) returns(AccountResponse);
	rpc Delete(DeleteReq) returns(AccountResponse);
}

message RegisterReq{
	string Email = 1;
	string UserName = 2;
	string Password = 3;
	string DisplayName = 4;
	string ProfileId = 5;
	string Id = 6;
}
message LoginReq{
	string LoginName = 1;
	string Password = 2;
}
message LoginByTokenReq{
	string AccessToken = 1;
}
message DeleteReq{
	string UserId = 1;
}

message AccountResponse{
	bool IsValid = 1;
	string AccessToken = 2;
	repeated Shared.MessageInfo Errors = 3;
}



